--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>Jackbox Party Game</title>
 </head>
 <body>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="script.js"></script>  
+  <!-- Modal for Joining Room-->
+  <div class="modal fade" id="joinGame-modal" tabindex="-1" role="dialog" >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Join a Room</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <label for="roomCode">Room Code</label>
+              <input type="text" class="form-control" id="roomCode" placeholder="Room Code...">
+            </div>
+            <div class="form-group">
+              <label for="playerName">Your Name</label>
+              <input type="text" class="form-control" id="playerName" placeholder="Your Name...">
+            </div>
+          </form>  
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type=submit id="joinGame-button" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="main-container">
+    <h1 class="main-heading">JACKBOX Party Game</h1>
+    <button id="newGame-button" class="btn btn-outline-primary">New Game</button>
+    <button id="showJoinModal-button" class="btn btn-outline-primary" data-toggle="modal" data-target="#joinGame-modal">Join Game</button>
+  </div>
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="script.js"></script>
+  <!-- Templates -->
+  <script type="text/template" id="default-template">
+    <p class="text"></p>
+  </script>
+  <script type="text/template" id="newGame-pressed-template">
+    <p class="text"></p>
+  </script>
+  <script type="text/template" id="invalid-room">
+    <p class="text"></p>
+  </script>  
 </body>
 </html>
