--- a/public/index.html
+++ b/public/index.html
@@ -54,12 +54,14 @@
   </script>
   <script type="text/template" id="newGame-pressed-template">
     <p class="text"></p>
-    <li>
-      
-    </li>
+    <li></li>
   </script>
   <script type="text/template" id="invalid-room">
     <p class="text"></p>
   </script>  
+  <script type="text/template" id="waiting-for-users">
+    <h3 class="greeting"></h3>
+    <p class="text">Waiting for other users to join</p>
+  </script>
 </body>
 </html>
