Added avatar choice

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,8 @@
   </script>
   <script type="text/template" id="newGame-pressed-template">
     <p class="text"></p>
-    <li></li>
+    <div class="connected-players">
+    </div>
   </script>
   <script type="text/template" id="invalid-room">
     <p class="text"></p>
@@ -62,6 +63,7 @@
   <script type="text/template" id="waiting-for-users">
     <h3 class="greeting"></h3>
     <p class="text">Waiting for other users to join</p>
+    <div class="container-avatar-choices"></div>
   </script>
 </body>
 </html>
