Added disabled used avatars

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,7 @@
     <p class="text"></p>
     <div class="connected-players">
     </div>
+    <button class="btn btn-outline-primary"id = "startGame-button">START GAME</button>
   </script>
   <script type="text/template" id="invalid-room">
     <p class="text"></p>
