--- a/public/index.html
+++ b/public/index.html
@@ -47,24 +47,22 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="template-rules.js"></script>
   <script src="script.js"></script>
   <!-- Templates -->
-  <script type="text/template" id="default-template">
-    <p class="text"></p>
-  </script>
-  <script type="text/template" id="newGame-pressed-template">
+  <script type="text/template" id="server-pregame-template">
     <p class="text"></p>
     <div class="connected-players">
     </div>
     <button class="btn btn-outline-primary"id = "startGame-button">START GAME</button>
   </script>
-  <script type="text/template" id="invalid-room">
-    <p class="text"></p>
-  </script>  
-  <script type="text/template" id="waiting-for-users">
+  <script type="text/template" id="client-pregame-template">
     <h3 class="greeting"></h3>
     <p class="text">Waiting for other users to join</p>
     <div class="container-avatar-choices"></div>
+  </script>
+  <script type="text/template" id="room-deleted">
+    <p>Server disconnected. Room <span id="room-roomcode"></span> is no longer available.</p>
   </script>
 </body>
 </html>
