--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link rel="stylesheet" href="time-circles/TimeCircles.css">
   <link rel="stylesheet" href="style.css">
   <title>Jackbox Party Game</title>
 </head>
@@ -43,10 +45,10 @@
     <button id="newGame-button" class="btn btn-outline-primary">New Game</button>
     <button id="showJoinModal-button" class="btn btn-outline-primary" data-toggle="modal" data-target="#joinGame-modal">Join Game</button>
   </div>
-  
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="time-circles/TimeCircles.js"></script>
   <script src="template-rules.js"></script>
   <script src="script.js"></script>
   <!-- Templates -->
@@ -63,6 +65,11 @@
   </script>
   <script type="text/template" id="room-deleted">
     <p>Server disconnected. Room <span id="room-roomcode"></span> is no longer available.</p>
+  </script>
+  <script type="text/template" id="server-game_starting-template">
+    <div class="startGame-countdown" data-timer="6"></div>
+  </script>
+  <script type="text/template" id="client-game_starting-template">
   </script>
 </body>
 </html>
