Added startGame as a test

--- a/public/index.html
+++ b/public/index.html
@@ -67,9 +67,15 @@
     <p>Server disconnected. Room <span id="room-roomcode"></span> is no longer available.</p>
   </script>
   <script type="text/template" id="server-game_starting-template">
-    <div class="startGame-countdown" data-timer="6"></div>
+    <div class="startGame-countdown" data-timer="2"></div>
   </script>
   <script type="text/template" id="client-game_starting-template">
+  </script>
+  <script type="text/template" id="server-in-game-template">
+    <div class="in-game-header bg-light">
+    </div>
+    <div class="in-game-main bg-light">
+    </div>
   </script>
 </body>
 </html>
